# StellarScienceProject

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ResourceLoader.cpp  ResourceLoader.hpp  main.cpp
src/components/: Camera.hpp  Gravity.hpp  Light.hpp  Physics.hpp  Renderable.hpp  Transform.hpp
src/resources/shaders/: CubeShader.frag  CubeShader.vert
src/resources/textures/: diffuse.png~
src/systems/: PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
